--- a/package.json
+++ b/package.json
@@ -3,6 +3,17 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
+  "files": [
+    "dist"
+  ],
+  "main": "dist/components-library-umd.cjs",
+  "module": "dist/components-library",
+  "exports": {
+    ".": {
+      "import": "dist/components-library",
+      "require": "dist/components-library-umd.cjs"
+    }
+  },
   "scripts": {
     "dev": "vite",
     "build": "tsc -b && vite build",
@@ -43,6 +54,7 @@
     "typescript": "~5.6.2",
     "typescript-eslint": "^8.18.2",
     "vite": "^6.0.5",
+    "vite-plugin-dts": "^4.5.0",
     "vite-tsconfig-paths": "^5.1.4"
   },
   "eslintConfig": {
